--- a/NG.css
+++ b/NG.css
@@ -43,3 +43,13 @@ footer{
   background-color: #f9f9f9;
   text-align: center;
 }
+
+img{
+  image-rendering: -webkit-optimize-contrast;
+}
+
+.card-img-top{
+  width: 100%;
+  height: 7rem;
+  object-fit: cover;
+}
