--- a/NG.css
+++ b/NG.css
@@ -53,3 +53,9 @@ img{
   height: 7rem;
   object-fit: cover;
 }
+
+@media only screen and (max-width: 600px){
+  .container{
+    max-width: 100%;
+  }
+}
