--- a/NG.css
+++ b/NG.css
@@ -57,6 +57,10 @@ img{
 @media only screen and (max-width: 600px){
   .container{
     max-width: 100%;
+    font-size: 0.8em;
+  }
+  .h1{
     font-size: 0.5em;
   }
 }
+
