--- a/NG.css
+++ b/NG.css
@@ -59,6 +59,8 @@ img{
     max-width: 100%;
     font-size: 0.8em;
   }
+
+@media only screen and (max-width: 600px){
   h1{
     font-size: 0.5em;
   }
