--- a/NG.css
+++ b/NG.css
@@ -54,11 +54,12 @@ img{
   object-fit: cover;
 }
 
-@media only screen and (max-width: 600px){
-  .container{
+@media only screen and (max-width: 600px) {
+  .container {
     max-width: 100%;
     font-size: 0.8em;
   }
+}
 
 @media only screen and (max-width: 600px){
   h1{
