--- a/NG.css
+++ b/NG.css
@@ -57,5 +57,9 @@ img{
 @media only screen and (max-width: 600px) {
   .container {
     max-width: 100%;
+    font-size: 0.8em;
+  }
+  h1{
+    font-size: 0.6em;
   }
 }
