--- a/NG.css
+++ b/NG.css
@@ -57,6 +57,12 @@ img{
 @media only screen and (max-width: 600px){
   .container {
     max-width: 100%;
-    font-size: 0.65em;
+    font-size: 0.6em;
+  }
+}
+
+@media only screen and (max-width: 600px){
+  h4{
+    text-align: center;
   }
 }
