--- a/NG.css
+++ b/NG.css
@@ -54,6 +54,25 @@ img{
   object-fit: cover;
 }
 
+.pro{
+  text-decoration: underline;
+}
+
+.caro{
+  color: white;
+  background-color: black;
+  display: inline;
+  -webkit-box-decoration-break: clone;
+  box-decoration-break: clone;
+
+}
+
+.d-block{
+  width: 100%;
+  height: 20rem;
+  object-fit: cover;
+}
+
 @media only screen and (max-width: 600px){
   .container {
     max-width: 100%;
