--- a/NG.css
+++ b/NG.css
@@ -55,16 +55,29 @@ img{
 }
 
 .pro{
+  color: lightblue;
   text-decoration: underline;
+  background-color: black;
+  display: inline;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-right: 5px;
+  padding-left: 5px;
+  -webkit-box-decoration-break: clone;
+  box-decoration-break: clone;
+
 }
 
 .caro{
   color: white;
   background-color: black;
   display: inline;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-right: 5px;
+  padding-left: 5px;
   -webkit-box-decoration-break: clone;
   box-decoration-break: clone;
-
 }
 
 .d-block{
